@@ -52,6 +52,9 @@ FIXED:
 * Fixed an issue with error reporting when trying to log a tuple that contains
   an element that can't be logged.
 
+* Fixed an issue that caused CAT-SOOP's main page to crash if a course with a
+  malformed preload.py was present.
+
 SECURITY:
 
 * Prevent submissions from being able to access materials defined in
